co-cone definition

--- a/limits.tex
+++ b/limits.tex
@@ -237,7 +237,7 @@ f_i^{(c_1)} = f_i^{(c_2)} \circ m,
 i.e. the morphisms in \cref{fig:conesmorphism} commute.
 \end{definition}
 
-\begin{definition}[Category of cones]
+\begin{definition}[Category of cones to $F$]
 \label{def:category_of_cones}
 Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{I}$ in $\cat{C}$.
 
@@ -247,7 +247,7 @@ The category of \mynameref{def:cone}s is denoted as $\Delta \downarrow
 F$ \cite{wiki:cone} 
 \end{definition}
 
-\begin{remark}[Category of cones]
+\begin{remark}[Category of cones to $F$]
 \label{rem:category_of_cones}
 Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{I}$ in $\cat{C}$
 and $\Delta \downarrow F$ is the \mynameref{def:category_of_cones}.
@@ -361,21 +361,21 @@ such that  $\forall a_i^{(I)} \in \catob{I}$ $u \circ f_i^{(c)} =
 f_i^{(l)}$ i.e. diagram shown on \cref{fig:colimit} commutes.
 \end{definition}
 
-\begin{definition}[Category of co-cones]
+\begin{definition}[Category of co-cones from $F$]
 \label{def:category_of_cocones}
 Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{I}$ in $\cat{C}$.
 
 TBD
 
-The category of \mynameref{def:cocone}s is denoted as $\Delta
-\downarrow F$ \cite{wiki:cone} 
+The category of \mynameref{def:cocone}s is denoted as $F \downarrow
+\Delta$ \cite{wiki:cone}  
 \end{definition}
 
 
 \begin{remark}[Category of co-cones]
 \label{rem:category_of_cocones}
 Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{I}$ in $\cat{C}$
-and $\Delta \uparrow F$ is the \mynameref{def:category_of_cocones}.
+and $F \downarrow \Delta$ is the \mynameref{def:category_of_cocones}.
 Then \mynameref{def:colimit} is \mynameref{def:initial_object} in the
 category. 
 \end{remark}
