--- a/notations.tex
+++ b/notations.tex
@@ -56,6 +56,8 @@
 \nomenclature{$\catcocone{c}{f}$}{\mynameref{def:cocone}}
 \nomenclature{$\Delta \downarrow
   F$}{\mynameref{def:category_of_cones}}
+\nomenclature{$F \downarrow
+  \Delta$}{\mynameref{def:category_of_cocones}}
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
