--- a/limits.tex
+++ b/limits.tex
@@ -56,6 +56,8 @@ Category $\cat{I}$ in the \cref{def:diagram_of_shape} is called
 \textit{Index category}.
 \end{definition}
 
+\subsection{Limit}
+
 \begin{definition}[Cone]
 \label{def:cone}
 \begin{figure}[H]
@@ -104,20 +106,6 @@ a_i^{(C)}\right\}$, where $a_i^{(C)} = F(a_i^{(I)})$
 indexed by objects from 
 $\cat{I}$ (see \cref{fig:cone}). The cone is denoted as $\catcone{c}{f}$.
 \end{definition}
-
-\begin{remark}[Coin as natural transformation]
-The \mynameref{def:cone} can be considered as a \mynameref{def:nt}.
-There are 2 functors between categories $\cat{I}$ and 
-$\cat{C}$. The first one is the \mynameref{def:diagram_of_shape} $F:
-\cat{I} \tof \cat{C}$. The second one is the 
-\mynameref{def:const_functor}: 
-$\Delta_c: \cat{I} \tof \cat{C}$. The
-\mynameref{def:nt} $\Delta_c
-\tont F$, by the definition, is the set of \mynameref{def:morphism}s from $\cat{C}$ with
-additional relations that are same as conditions defined for
-the \mynameref{def:cone} $\catcone{c}{f}$. Therefore we can consider
-the \mynameref{def:cone} as a \mynameref{def:nt}. 
-\end{remark}
 
 \begin{definition}[Limit]
 \label{def:limit}
@@ -255,7 +243,9 @@ Then \mynameref{def:limit} is \mynameref{def:terminal_object} in the
 category.
 \end{remark}
 
-\begin{definition}[Co-cone]
+\subsection{Colimit}
+
+\begin{definition}[Cocone]
 \label{def:cocone}
 \begin{figure}[H]
   \centering
@@ -305,7 +295,7 @@ $\cat{I}$ (see \cref{fig:cocone}). The co-cone is denoted as
 $\catcocone{c}{f}$. 
 \end{definition}
 
-\begin{definition}[Co-limit]
+\begin{definition}[Colimit]
 \label{def:colimit}
 \begin{figure}[H]
   \centering
@@ -379,6 +369,19 @@ and $F \downarrow \Delta$ is the \mynameref{def:category_of_cocones}.
 Then \mynameref{def:colimit} is \mynameref{def:initial_object} in the
 category. 
 \end{remark}
+
+\section{Cone as natural transformation}
+The \mynameref{def:cone} can be considered as a \mynameref{def:nt}.
+There are 2 functors between categories $\cat{I}$ and 
+$\cat{C}$. The first one is the \mynameref{def:diagram_of_shape} $F:
+\cat{I} \tof \cat{C}$. The second one is the 
+\mynameref{def:const_functor}: 
+$\Delta_c: \cat{I} \tof \cat{C}$. The
+\mynameref{def:nt} $\Delta_c
+\tont F$, by the definition, is the set of \mynameref{def:morphism}s from $\cat{C}$ with
+additional relations that are same as conditions defined for
+the \mynameref{def:cone} $\catcone{c}{f}$. Therefore we can consider
+the \mynameref{def:cone} as a \mynameref{def:nt}. 
 
 \section{Categorical constructions as limits}
 
