--- a/limits.tex
+++ b/limits.tex
@@ -408,3 +408,21 @@ objects in the category $\cat{C}$. The \mynameref{def:limit} of the
 \mynameref{def:diagram_of_shape} is the \mynameref{def:product} of the
 2 objects in the category $\cat{C}$.
 \end{example}
+
+
+\begin{example}[Colimit][Initial object]
+\index{Initial object!Colimit example}
+Lets choose \mynameref{def:empty_category} as the
+\mynameref{def:indexcategory} $\cat{I}$. The \mynameref{def:colimit}
+will be \mynameref{def:initial_object} in the category $\cat{C}$.
+\end{example}
+
+\begin{example}[Colimit][Sum]
+\index{Sum!Colimit example}
+Lets choose \mynameref{def:discrete_category} with 2 objects as the
+\mynameref{def:indexcategory} $\cat{I}$. The 
+\mynameref{def:diagram_of_shape} $F$ gives us the mapping into 2
+objects in the category $\cat{C}$. The \mynameref{def:colimit} of the
+\mynameref{def:diagram_of_shape} is the \mynameref{def:sum} of the
+2 objects in the category $\cat{C}$.
+\end{example}
