--- a/limits.tex
+++ b/limits.tex
@@ -392,12 +392,23 @@ The empty category will give us the terminal object. The
 \mynameref{def:discrete_category} with 2 elements produces
 \mynameref{def:product} as the \mynameref{def:limit}.
 
+\subsection{Initial and terminal objects}
+
 \begin{example}[Limit][Terminal object]
 \index{Terminal object!Limit example}
 Lets choose \mynameref{def:empty_category} as the
 \mynameref{def:indexcategory} $\cat{I}$. The \mynameref{def:limit}
 will be \mynameref{def:terminal_object} in the category $\cat{C}$.
 \end{example}
+
+\begin{example}[Colimit][Initial object]
+\index{Initial object!Colimit example}
+Lets choose \mynameref{def:empty_category} as the
+\mynameref{def:indexcategory} $\cat{I}$. The \mynameref{def:colimit}
+will be \mynameref{def:initial_object} in the category $\cat{C}$.
+\end{example}
+
+\subsection{Product and sum}
 
 \begin{example}[Limit][Product]
 \index{Product!Limit example}
@@ -407,14 +418,6 @@ Lets choose \mynameref{def:discrete_category} with 2 objects as the
 objects in the category $\cat{C}$. The \mynameref{def:limit} of the
 \mynameref{def:diagram_of_shape} is the \mynameref{def:product} of the
 2 objects in the category $\cat{C}$.
-\end{example}
-
-
-\begin{example}[Colimit][Initial object]
-\index{Initial object!Colimit example}
-Lets choose \mynameref{def:empty_category} as the
-\mynameref{def:indexcategory} $\cat{I}$. The \mynameref{def:colimit}
-will be \mynameref{def:initial_object} in the category $\cat{C}$.
 \end{example}
 
 \begin{example}[Colimit][Sum]
