--- a/limits.tex
+++ b/limits.tex
@@ -394,6 +394,11 @@ The empty category will give us the terminal object. The
 
 \subsection{Initial and terminal objects}
 
+If we choose \mynameref{def:empty_category} as the
+\mynameref{def:indexcategory} then we can get
+\mynameref{def:terminal_object} as \mynameref{def:limit} and
+\mynameref{def:initial_object} as \mynameref{def:colimit}.
+
 \begin{example}[Limit][Terminal object]
 \index{Terminal object!Limit example}
 Lets choose \mynameref{def:empty_category} as the
@@ -409,6 +414,11 @@ will be \mynameref{def:initial_object} in the category $\cat{C}$.
 \end{example}
 
 \subsection{Product and sum}
+
+If choose \mynameref{def:discrete_category} with 2 objects as the
+\mynameref{def:indexcategory} then we can get \mynameref{def:product}
+as \mynameref{def:limit} and \mynameref{def:sum} as
+\mynameref{def:colimit}. 
 
 \begin{example}[Limit][Product]
 \index{Product!Limit example}
@@ -429,3 +439,7 @@ objects in the category $\cat{C}$. The \mynameref{def:colimit} of the
 \mynameref{def:diagram_of_shape} is the \mynameref{def:sum} of the
 2 objects in the category $\cat{C}$.
 \end{example}
+
+\subsection{Equalizer}
+
+TBD
