product as a limit

--- a/limits.tex
+++ b/limits.tex
@@ -469,7 +469,8 @@ Lets choose \mynameref{def:discrete_category} with 2 objects as the
 \end{figure}
 The 
 \mynameref{def:diagram_of_shape} $F$ gives us the mapping into 2
-objects in the category $\cat{C}$. The \mynameref{def:limit} of the
+objects in the category $\cat{C}$ (see \cref{fig:limit_product}). The
+\mynameref{def:limit} of the 
 \mynameref{def:diagram_of_shape} is the \mynameref{def:product} of the
 2 objects in the category $\cat{C}$.
 \end{example}
