product as a limit, sum as colimit

--- a/notations.tex
+++ b/notations.tex
@@ -11,6 +11,8 @@
 \nomenclature{$a, b$}{\mynameref{def:object}s (Latin small letters)}
 \nomenclature{$f, g, h$}{\mynameref{def:morphism} (Latin small
   letter)}
+\nomenclature{$a \times b$}{\mynameref{def:product}}
+\nomenclature{$a \oplus b$}{\mynameref{def:sum}}
 \nomenclature{$f: a \to b$}{\mynameref{def:morphism} (simple arrow)}
 \nomenclature{$f: a \hookrightarrow b$}{\mynameref{def:monomorphism}
   (hook arrow)}
