--- a/limits.tex
+++ b/limits.tex
@@ -478,9 +478,54 @@ objects in the category $\cat{C}$ (see \cref{fig:limit_product}). The
 \begin{example}[Colimit][Sum]
 \index{Sum!Colimit example}
 Lets choose \mynameref{def:discrete_category} with 2 objects as the
-\mynameref{def:indexcategory} $\cat{I}$. The 
+\mynameref{def:indexcategory} $\cat{I}$. 
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
+          width=.8pt,inner sep=1pt},every fit/.style={ellipse,draw,inner
+          sep=-2pt}]
+
+      % the texts
+
+      \node at (0,0) {$I$};        
+      \node at (0,7) {$C$};        
+
+      \node[ele,label=left:$a^{(I)}$] (ac) at (1.5,0) {};    
+      \node[ele,label=right:$b^{(I)}$] (bc) at (5.5,0) {};    
+      \node[ele,label=left:$a$] (ad) at (1.5,3) {};
+      \node[ele,label=right:$b$] (bd) at (5.5,3) {};
+      \node[ele,label=above:$c$] (d) at (3.5,7) {};
+      \node[ele,label=below:$a \oplus b$] (l) at (3.5,4) {};
+
+      \node[draw,fit= (ac) (bc),minimum width=6cm, minimum
+        height=2.5cm] {} ;
+      \node[draw,fit= (ad) (bd) (d) (l),minimum width=7cm, minimum
+        height=7cm] {} ;
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (l) to
+      node[right]{$u$} (d);
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ad) to
+      node[left]{$f^{(c)}_a$} (d);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (bd) to
+      node[right]{$f^{(c)}_b$} (d);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ad) to
+      node[above]{$f^{(l)}_a$} (l);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (bd) to
+      node[above]{$f^{(l)}_b$} (l);
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ac) to
+      node[left]{$a = F(a^{(I)})$} (ad);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (bc) to
+      node[right]{$b = F(b^{(I)})$} (bd);
+  \end{tikzpicture}
+  \caption{Sum as a colimit} 
+  \label{fig:colimit_sum}
+\end{figure}
+The 
 \mynameref{def:diagram_of_shape} $F$ gives us the mapping into 2
-objects in the category $\cat{C}$. The \mynameref{def:colimit} of the
+objects in the category $\cat{C}$ (see \cref{fig:colimit_sum}). The
+\mynameref{def:colimit} of the 
 \mynameref{def:diagram_of_shape} is the \mynameref{def:sum} of the
 2 objects in the category $\cat{C}$.
 \end{example}
