--- a/limits.tex
+++ b/limits.tex
@@ -397,20 +397,76 @@ The empty category will give us the terminal object. The
 If we choose \mynameref{def:empty_category} as the
 \mynameref{def:indexcategory} then we can get
 \mynameref{def:terminal_object} as \mynameref{def:limit} and
-\mynameref{def:initial_object} as \mynameref{def:colimit}.
+\mynameref{def:initial_object} as \mynameref{def:colimit}. 
 
 \begin{example}[Limit][Terminal object]
 \index{Terminal object!Limit example}
 Lets choose \mynameref{def:empty_category} as the
-\mynameref{def:indexcategory} $\cat{I}$. The \mynameref{def:limit}
+\mynameref{def:indexcategory} $\cat{I}$. 
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
+          width=.8pt,inner sep=1pt},every fit/.style={ellipse,draw,inner
+          sep=-2pt}]
+
+      % the texts
+
+      \node at (0,0) {$I$};        
+      \node at (0,7) {$C$};        
+
+      \node[ele,label=above:$c$] (d) at (3.5,7) {};
+      \node[ele,label=below:$t$] (l) at (3.5,5) {};
+
+      \node [draw, thick, circle, minimum width=5cm]  at (3.5,0) {};
+      \node[draw,fit= (d) (l),minimum width=5cm, minimum
+        height=5cm] {} ;
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (d) to
+      node[right]{$u$} (l);
+
+  \end{tikzpicture}
+  \caption{Terminal object $t$ as a limit} 
+  \label{fig:limit_terminal_object}
+\end{figure}
+The \mynameref{def:cone} consists from the apex $c$ only (see
+\cref{fig:limit_terminal_object}). 
+The \mynameref{def:limit}
 will be \mynameref{def:terminal_object} in the category $\cat{C}$.
 \end{example}
 
 \begin{example}[Colimit][Initial object]
 \index{Initial object!Colimit example}
 Lets choose \mynameref{def:empty_category} as the
-\mynameref{def:indexcategory} $\cat{I}$. The \mynameref{def:colimit}
-will be \mynameref{def:initial_object} in the category $\cat{C}$.
+\mynameref{def:indexcategory} $\cat{I}$. 
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
+          width=.8pt,inner sep=1pt},every fit/.style={ellipse,draw,inner
+          sep=-2pt}]
+
+      % the texts
+
+      \node at (0,0) {$I$};        
+      \node at (0,7) {$C$};        
+
+      \node[ele,label=above:$c$] (d) at (3.5,7) {};
+      \node[ele,label=below:$i$] (l) at (3.5,5) {};
+
+      \node [draw, thick, circle, minimum width=5cm]  at (3.5,0) {};
+      \node[draw,fit= (d) (l),minimum width=5cm, minimum
+        height=5cm] {} ;
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (l) to
+      node[right]{$u$} (d);
+
+  \end{tikzpicture}
+  \caption{Initial object $i$ as a colimit} 
+  \label{fig:colimit_initial_object}
+\end{figure}
+The \mynameref{def:cocone} consists from the apex $c$ only (see
+\cref{fig:colimit_initial_object}). 
+The \mynameref{def:colimit}
+will be \mynameref{def:initial_object} in the category $\cat{C}$. 
 \end{example}
 
 \subsection{Product and sum}
