Index category for product and sum

--- a/limits.tex
+++ b/limits.tex
@@ -500,7 +500,7 @@ as \mynameref{def:limit} and \mynameref{def:sum} as
       \node[draw,fit= (a) (b),minimum width=5cm, minimum
         height=2.5cm] {} ;
   \end{tikzpicture}
-  \caption{Index category $I$ for product and sum as limits. It
+  \caption{Index category $I$ for product and sum. It
     consists of 2 objects $a^{(I)}, b^{(I)}$ and 2 trivial (identity)
     morphisms $\idm{a^{(I)}}, \idm{b^{(I)}}$}   
   \label{fig:limit_product_index_category}
