--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -327,8 +327,7 @@ can be treated as the same object.
 \label{def:morphism_set}
   The set of morphisms between objects $a$ and $b$ in the $\cat{C}$
   will be denoted as $\hom_{\cat{C}}(a, b)$. The set will be denoted
-  as $\hom(a, b)$ if the category is not
-  important 
+  as $\hom(a, b)$ if the category does not matter 
 \end{definition}
 
 The \mynameref{def:category} can be considered as a way to represent a
