--- a/limits.tex
+++ b/limits.tex
@@ -637,7 +637,7 @@ objects in the category $\cat{C}$ (see \cref{fig:colimit_sum}). The
 
 \subsection{Equalizer}
 
-If choose \mynameref{def:discrete_category} with 2 objects as the
+If choose a \mynameref{def:category} with 2 objects as the
 \mynameref{def:indexcategory} (see
 \cref{fig:limit_equlizer_index_category}) and 2 \mynameref{def:morphism}s
 connecting one object with another then we can get equalizer 
@@ -680,7 +680,7 @@ as \mynameref{def:limit}.
 
 \begin{definition}[Equalizer]
 \label{def:equalizer}
-Lets choose \mynameref{def:discrete_category} with 2 objects $a^{(I)},
+Lets choose a \mynameref{def:category} with 2 objects $a^{(I)},
 b^{(I)}$ and 2 additional morphisms
    $f^{(I)}, g^{(I)} \in \hom_{\cat{I}}(a^{(I)}, b^{(I)})$ as the
 \mynameref{def:indexcategory} $\cat{I}$ (see
@@ -725,7 +725,7 @@ The
 objects and 2 morphisms in the category $\cat{C}$. The
 \mynameref{def:limit} of the 
 \mynameref{def:diagram_of_shape} (see \cref{fig:equlizer}) is the
-\textit{equalizer}. 
+\textit{equalizer}. The equalizer is denoted as $eq\left(f, g\right)$.
 \end{definition}
 
 In the \mynameref{def:setcategory} equalizer determines a solution for the
