--- a/notations.tex
+++ b/notations.tex
@@ -60,6 +60,7 @@
   F$}{\mynameref{def:category_of_cones}}
 \nomenclature{$F \downarrow
   \Delta$}{\mynameref{def:category_of_cocones}}
+\nomenclature{$eq\left(f, g\right)$}{\mynameref{def:equalizer}}
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
