Equalizer: set category example

--- a/limits.tex
+++ b/limits.tex
@@ -755,6 +755,10 @@ objects and 2 morphisms in the category $\cat{C}$. The
 \textit{equalizer}. The equalizer is denoted as $eq\left(f, g\right)$.
 \end{definition}
 
+The meaning of the \mynameref{def:equalizer} can be described in the 
+\mynameref{def:setcategory}
+\begin{example}[Equalizer][$\cat{Set}$]
+\label{ex:equalizer_set}
 In the \mynameref{def:setcategory} equalizer determines a solution for the
 following equation 
 \[
@@ -764,3 +768,4 @@ f(x) = g(x)
 We consider a
 
 TBD
+\end{example}
