--- a/yoneda.tex
+++ b/yoneda.tex
@@ -2,6 +2,12 @@
 \chapter{Yoneda's lemma}
 \label{sec:yoneda}
 
+\section{Hom functor}
+
+TBD
+
+\section{Yoneda's lemma}
+
 TBD
 
 \section{Examples}
