homset and locally small categories

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -401,6 +401,15 @@ A category $\cat{C}$ is called \textit{small} if both $\catob{C}$ and
 $\cathom{C}$ are \nameref{def:set}s
 \end{definition}
 
+\begin{definition}[Locally small category]
+\label{def:localy_small_category}
+\index{Category!locally small}
+\index{homset}
+A category $\cat{C}$ is called \textit{locally small} if 
+$\cathom{C}$ is a \nameref{def:set}. The set is called \textit{homset}.
+\end{definition}
+
+
 \begin{definition}[Large category]
 \label{def:large_category}
 \index{Category!large}
