--- a/yoneda.tex
+++ b/yoneda.tex
@@ -1,7 +1,8 @@
 %% -*- coding:utf-8 -*-
 \chapter{Yoneda's lemma}
 \label{sec:yoneda}
-
+We will assume that the category $\cat{C}$ to be a
+\mynameref{def:localy_small_category}.
 \section{Hom functor}
 
 TBD
