--- a/notations.tex
+++ b/notations.tex
@@ -61,6 +61,8 @@
 \nomenclature{$F \downarrow
   \Delta$}{\mynameref{def:category_of_cocones}}
 \nomenclature{$eq\left(f, g\right)$}{\mynameref{def:equalizer}}
+\nomenclature{$Hom_c(a, -)$}{\mynameref{def:cov_hom_functor}}
+\nomenclature{$Hom_c(-, a)$}{\mynameref{def:con_hom_functor}}
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
