--- a/yoneda.tex
+++ b/yoneda.tex
@@ -5,6 +5,23 @@ We will assume that the category $\cat{C}$ to be a
 \mynameref{def:localy_small_category}.
 \section{Hom functor}
 
+\begin{definition}[Covariant Hom functor]
+\label{def:cov_hom_functor}
+Let $\cat{C}$ is a \mynameref{def:localy_small_category}
+TBD
+
+The \textit{covariant Hom functor} is denoted as $Hom_c(a, -)$.
+\end{definition}
+
+\begin{definition}[Contravariant Hom functor]
+\label{def:con_hom_functor}
+Let $\cat{C}$ is a \mynameref{def:localy_small_category}
+TBD
+
+The \textit{contravariant Hom functor} is denoted as $Hom_c(-, a)$.
+\end{definition}
+
+
 TBD
 
 \section{Yoneda's lemma}
