--- a/yoneda.tex
+++ b/yoneda.tex
@@ -7,7 +7,9 @@ We will assume that the category $\cat{C}$ to be a
 
 \begin{definition}[Covariant Hom functor]
 \label{def:cov_hom_functor}
-Let $\cat{C}$ is a \mynameref{def:localy_small_category}
+Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $a \in
+\catob{C}$. Consider \mynameref{def:functor} from $\cat{C}$ to the
+\mynameref{def:setcategory} defined by the following rules.  
 TBD
 
 The \textit{covariant Hom functor} is denoted as $Hom_c(a, -)$.
