--- a/yoneda.tex
+++ b/yoneda.tex
@@ -9,9 +9,13 @@ We will assume that the category $\cat{C}$ to be a
 \label{def:cov_hom_functor}
 Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $a \in
 \catob{C}$. Consider \mynameref{def:functor} from $\cat{C}$ to the
-\mynameref{def:setcategory} defined by the following rules.  
-TBD
-
+\mynameref{def:setcategory} defined by the following rules
+\begin{itemize}
+\item $\forall x \in \catob{C}$ define an object in the set category:
+  $Hom_c(a, x) \in \catob{Set}$ 
+\item $\forall f: x \to y \in \cathom{C}$ define a function in the set category
+  $Hom_c(a, f): Hom_c(a, x) \to Hom_c(a, y)$.
+\end{itemize}  
 The \textit{covariant Hom functor} is denoted as $Hom_c(a, -)$.
 \end{definition}
 
