--- a/yoneda.tex
+++ b/yoneda.tex
@@ -5,6 +5,18 @@ We will assume that the category $\cat{C}$ to be a
 \mynameref{def:localy_small_category}.
 \section{Hom functor}
 
+We are going to define the Hom functors. There are 2 hom functors:
+\mynameref{def:covariant_functor} and
+\mynameref{def:contravariant_functor}. In the
+\mynameref{def:cov_hom_functor} we pick up an object $a$ from 
+$\cat{C}$ and consider the collection of morphisms from $a$ to an
+arbitrary object $x$ from the category. The collection is a
+\mynameref{def:set} as soon as $\cat{C}$ is a
+\mynameref{def:localy_small_category}. 
+
+TBD
+
+
 \begin{definition}[Covariant Hom functor]
 \label{def:cov_hom_functor}
 Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $a \in
@@ -19,6 +31,12 @@ Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $a \in
 \end{itemize}  
 The \textit{covariant Hom functor} is denoted as $Hom_c(a, -)$.
 \end{definition}
+
+\begin{remark}[Covariant Hom functor]
+\label{def:cov_hom_functor}
+
+TBD
+\end{remark}
 
 \begin{definition}[Contravariant Hom functor]
 \label{def:con_hom_functor}
