--- a/yoneda.tex
+++ b/yoneda.tex
@@ -7,7 +7,7 @@ We will assume that the category $\cat{C}$ to be a
 
 We are going to define the Hom functors. There are 2 hom functors:
 \mynameref{def:covariant_functor} and
-\mynameref{def:contravariant_functor}. In the
+\mynameref{def:contravariant_functor}. For the
 \mynameref{def:cov_hom_functor} we pick up an object $a$ from 
 $\cat{C}$ and consider the collection of morphisms from $a$ to an
 arbitrary object $x$ from the category. The collection is a
@@ -32,11 +32,11 @@ Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $a \in
 The \textit{covariant Hom functor} is denoted as $Hom_c(a, -)$.
 \end{definition}
 
-\begin{remark}[Covariant Hom functor]
-\label{def:cov_hom_functor}
+\begin{example}[Covariant Hom functor]
+\label{ex:cov_hom_functor}
 
 TBD
-\end{remark}
+\end{example}
 
 \begin{definition}[Contravariant Hom functor]
 \label{def:con_hom_functor}
