--- a/yoneda.tex
+++ b/yoneda.tex
@@ -29,7 +29,7 @@ Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $a \in
   $Hom_c(a, f): Hom_c(a, x) \to Hom_c(a, y)$ as follows
   $Hom_c(a, f) = \{f \circ g | g \in Hom_c(a, x)\}$.
 \end{itemize}  
-The \textit{covariant Hom functor} is denoted as $Hom_c(a, -)$.
+The \textit{covariant Hom functor} is denoted as $\catcovhom{C}{a}$.
 \end{definition}
 
 \begin{example}[Covariant Hom functor]
@@ -93,7 +93,7 @@ The \textit{covariant Hom functor} is denoted as $Hom_c(a, -)$.
         height=5.5cm] {} ;
 
     \end{tikzpicture}
-    \caption{Covariant Hom functor example. Category $\cat{C}$}
+    \caption{Covariant Hom functor $\catcovhom{C}{a}$ example. Category $\cat{C}$}
     \label{fig:cov_hom_functor}
   \end{figure}
 TBD
@@ -104,7 +104,7 @@ TBD
 Let $\cat{C}$ is a \mynameref{def:localy_small_category}
 TBD
 
-The \textit{contravariant Hom functor} is denoted as $Hom_c(-, a)$.
+The \textit{contravariant Hom functor} is denoted as $\catconhom{C}{a}$.
 \end{definition}
 
 
