--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -62,7 +62,7 @@ Morphism is a kind of relation between 2 \mynameref{def:object}s.
   \textit{target}.
 
   The \mynameref{def:set} of all morphisms between objects $a$ and $b$
-  is denoted as $\hom\left(a, b\right)$.
+  is denoted as $\catmset{a}{b}$.
 \end{definition}
 
 The important remark about morphisms is below
@@ -326,8 +326,8 @@ can be treated as the same object.
 \begin{definition}[Set of morphisms]
 \label{def:morphism_set}
   The set of morphisms between objects $a$ and $b$ in the $\cat{C}$
-  will be denoted as $\hom_{\cat{C}}(a, b)$. The set will be denoted
-  as $\hom(a, b)$ if the category does not matter 
+  will be denoted as $\catmset[C]{a}{b}$. The set will be denoted
+  as $\catmset{a}{b}$ if the category does not matter 
 \end{definition}
 
 The \mynameref{def:category} can be considered as a way to represent a
