--- a/notations.tex
+++ b/notations.tex
@@ -47,8 +47,8 @@
   between $a$ and $b$} 
 \nomenclature{$\left<M, \mu, \eta\right>$}{\mynameref{def:monad}}
 \nomenclature{$\cat{C_M}$}{\mynameref{def:kleisli_category}}
-\nomenclature{$\hom(a, b)$}{\mynameref{def:morphism_set} between $a$ and $b$}
-\nomenclature{$\hom_{\cat{C}}(a, b)$}{\mynameref{def:morphism_set}
+\nomenclature{$\catmset{a}{b}$}{\mynameref{def:morphism_set} between $a$ and $b$}
+\nomenclature{$\catmset[C]{a}{b}$}{\mynameref{def:morphism_set}
   between $a$ and $b$ in category $\cat{C}$}
 \nomenclature{$\mathcal{H}_n$}{finite dimensional
   \mynameref{def:hilbert_space}}
