--- a/yoneda.tex
+++ b/yoneda.tex
@@ -3,7 +3,7 @@
 \label{sec:yoneda}
 We will assume that the category $\cat{C}$ to be a
 \mynameref{def:localy_small_category}.
-\section{Hom functor}
+\section{Hom functors}
 
 We are going to define the Hom functors. There are 2 hom functors:
 \mynameref{def:covariant_functor} and
@@ -24,10 +24,10 @@ Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $a \in
 \mynameref{def:setcategory} defined by the following rules
 \begin{itemize}
 \item $\forall x \in \catob{C}$ define an object in the set category:
-  $Hom_c(a, x) \in \catob{Set}$ 
+  $\catmset[C]{a}{x} \in \catob{Set}$ 
 \item $\forall f: x \to y \in \cathom{C}$ define a function in the set category
-  $Hom_c(a, f): Hom_c(a, x) \to Hom_c(a, y)$ as follows
-  $Hom_c(a, f) = \{f \circ g | g \in Hom_c(a, x)\}$.
+  $\catmset[C]{a}{f}: \catmset[C]{a}{x} \to \catmset[C]{a}{y}$ as follows
+  $\catmset[C]{a}{f} = \{f \circ g | g \in \catmset[C]{a}{x}\}$.
 \end{itemize}  
 The \textit{covariant Hom functor} is denoted as $\catcovhom{C}{a}$.
 \end{definition}
@@ -96,6 +96,7 @@ The \textit{covariant Hom functor} is denoted as $\catcovhom{C}{a}$.
     \caption{Covariant Hom functor $\catcovhom{C}{a}$ example. Category $\cat{C}$}
     \label{fig:cov_hom_functor}
   \end{figure}
+Consider category $\cat{C}$ in the \cref{fig:cov_hom_functor}
 TBD
 \end{example}
 
