--- a/limits.tex
+++ b/limits.tex
@@ -165,7 +165,7 @@ f_i^{(c)}$ i.e. diagram shown on \cref{fig:limit} commutes.
 
 If we have 2 objects from $\cat{C}$ ($c_1, c_2 \in \catob{C}$) then we can have a lot of
 morphisms between the objects which form a set: $\hom_{\cat{C}}(c_1,
-c_2)$. There is a subset of $\hom_{\cat{C}}(c_1, c_2)$ that can be
+c_2)$. There is a subset of $\catmset[C]{c_1}{c_2}$ that can be
 called as cone's morphisms.
 \begin{definition}[Morphisms of cones]
 \begin{figure}
